--- a/src/components/FullPageMobileWrapper/FullPageMobileWrapper.scss
+++ b/src/components/FullPageMobileWrapper/FullPageMobileWrapper.scss
@@ -24,6 +24,10 @@
         }
     }
 
+    &__body {
+        overflow-y: auto;
+    }
+
     &__header {
         align-items: center;
         padding: 2rem;
